<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".LoginScreen">

    <TextView
        android:id="@+id/LoginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_name"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/LoginNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_login_name_here"
        android:textSize="15dp"
        android:layout_below="@+id/LoginName" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20dp"
        android:layout_below="@+id/LoginNameInput"/>

    <EditText
        android:id="@+id/PasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_here"
        android:inputType="textPassword"
        android:textSize="15dp"
        android:layout_below="@+id/Password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/PasswordInput">
        <Button
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:layout_weight="0.5"/>
        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:layout_weight="0.5"/>
    </LinearLayout>

</RelativeLayout>